src/components/image-card/ImageCard.component.scss
@import "../../App.scss";

.card {
    margin: 30px;
    &__container {
        border: 1px solid $color-scarpa-flow;
        padding: 20px 30px;
        box-shadow: 6px 8px 28px $color-scarpa-flow;
        max-width: 330px;
        border-radius: 10px;
    }
    &__brands,
    &__included {
        list-style: none;
        padding-inline-start: 0;
        display: flex;
    }
    &__title {
        margin-top: 0;
    }
    &__included {
        justify-content: space-between;
        flex-wrap: wrap;

        li {
            min-width: 50%;
            display: flex;
            align-items: center;

            svg {
                margin-right: 5px;
            }
        }
    }
    &__brands {
        margin-top: 7px;
    }
    &__brand {
        height: 30px;
        margin-right: 10px;
    }
    &__image {
        max-width: 100%;
        transition: transform 2s;
        &-container {
            height: 250px;
            display: flex;
            align-items: center;
        }
    }
    &:hover {
        .card__image {
            transform: scale(1.1);
        }
    }
}

@include breakpoint($breakpoint-mobile-max) {
    
    .card {
        margin: 10px 25px;
        &__image-container {
            height: 150px;
        }
    }
}

